[package]
name = "pico-st7565-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5.0"
rp-pico = { version = "0.8", features = ["critical-section-impl"] }
embedded-hal = "0.2"
pio = "0.2"
pio-proc = "0.2"
usb-device = "0.2.9"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
st7565 = "0.4.0"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
